<resources>
    <string name="app_name">Fun Quiz</string>
    <string name="title_text">Fun Quiz</string>
    <string name="out_of_text1">Question: 77/913</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="previous_button">PREV</string>
    <string name="next_button">NEXT</string>
    <string name="placeHolder">Hello world this is the place to put value</string>
    <string name="text_formatted">Question: %d/%d</string>
    <string name="correct_answer">CORRECT</string>
    <string name="incorrect_answer">INCORRECT</string>
    <string name="out_of_text">Question: 0/913</string>
</resources>