<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/title_text"
            android:textColor="#0B2FEF"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.032" />

        <TextView
            android:id="@+id/out_of_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/out_of_text"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text"
            app:layout_constraintVertical_bias="0.034" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="163dp"
            app:cardCornerRadius="@dimen/corner_radius"
            android:backgroundTint="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.301"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/question_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                android:text="@string/placeHolder"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/previous_button"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_falseNew" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.759"
            app:layout_constraintStart_toEndOf="@+id/button_prev"
            app:layout_constraintTop_toBottomOf="@+id/button_falseNew"
            app:layout_constraintVertical_bias="0.503" />

        <Button
            android:id="@+id/button_true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/corner"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="@dimen/button_padding"
            android:text="@string/true_button"
            android:textColor="#F4A10F"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.592" />

        <Button
            android:id="@+id/button_falseNew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/corner"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:padding="@dimen/button_padding"
            android:text="@string/false_button"
            android:textColor="#F4A10F"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_true"
            app:layout_constraintVertical_bias="0.08" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>